third_party/WebKit/Source/core/layout/LayoutBox.h
@@ -1240,8 +1240,9 @@ class CORE_EXPORT LayoutBox : public LayoutBoxModelObject {
   LayoutRect VisualOverflowRectForPropagation() const {
     return RectForOverflowPropagation(VisualOverflowRect());
   }
-  LayoutRect LogicalLayoutOverflowRectForPropagation() const;
-  LayoutRect LayoutOverflowRectForPropagation() const;
+  LayoutRect LogicalLayoutOverflowRectForPropagation(
+      LayoutObject* container) const;
+  LayoutRect LayoutOverflowRectForPropagation(LayoutObject* container) const;
 
   bool HasOverflowModel() const { return overflow_.get(); }
   bool HasSelfVisualOverflow() const {
